--- a/src/scss/_impress.scss
+++ b/src/scss/_impress.scss
@@ -1,5 +1,3 @@
-@import "mixins";
-
 /*** Enable clicking on elements 'hiding' behind body in 3D ***************************************/
 
 body {
@@ -18,9 +16,10 @@ body {
 	position: relative;
 	transition: opacity linear 1s;
 	width: 1000px;
+	//border: 1px solid blue;
 
 	&:not(.active) {
-		opacity: 0.3;
+		opacity: 0.2;
 
 		&.invisible {
 			opacity: 0.0;
@@ -62,70 +61,5 @@ body {
 		margin: 20px auto 0;
 		padding: 20px 40px;
 		width: 600px;
-	}
-}
-
-svg {
-	pointer-events: none;
-	height: 744px;
-	left: 0;
-	position: absolute;
-	top: 0;
-	width: 1000px;
-
-
-	.line {
-		fill: none;
-		stroke-width: 3px;
-		stroke: $alternateColor;
-	}
-
-	.arrow {
-		fill: none;
-		marker-end: url(#markerArrow);
-		stroke: $alternateColor;
-		stroke-width: 3px;
-	}
-
-	.arrow-dashed {
-		fill: none;
-		marker-end: url(#markerArrow);
-		stroke: $alternateColor;
-		stroke-dasharray: 4, 4;
-		stroke-width: 3px;
-	}
-
-
-	path {
-		fill: none;
-		stroke-width: 3px;
-		stroke: $alternateColor;
-
-	}
-
-	marker {
-		path {
-			fill: $alternateColor;
-			stroke: none;
-		}
-	}
-}
-
-.chart {
-	position: absolute;
-	//border-left: 5px solid #f4771b;
-	left: 0px;
-	top: 20px;
-	right: 20px;
-	bottom:  20px;
-
-	.bar {
-		border: 2px solid #f4771b;
-		border-left: 0;
-		background-color: blue;
-		position: absolute;
-		top: 20px;
-		left: 0;
-		background-color: transparentize(#f4771b,0.6);
 	}
 }
