--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -616,10 +616,10 @@ pre[class*="language-"] {
 	background-color: $boxColor !important;
 	border: 5px solid $boxBorderColor;
 	border-radius: 10px;
-	margin: 0 0 40px 0 !important;
+	margin: 0 0 0 0 !important;
 	padding: 20px;
 	white-space: nowrap;
-	overflow: hidden;
+	overflow: hidden !important;
 }
 
 /**
